--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
 /* Global */
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto+Slab:400,700|Roboto:400,500,700,900&display=swap');
+
 body {
+  font-family: 'Roboto Mono' monospace;
   margin: 0;
   padding: 0;
   position: fixed;
@@ -8,7 +11,8 @@ body {
   left: 0;
   right: 0;
   background-image: url('../assets/Cover.png');
-  background-size: 100%;
+  /* background-position: center; */
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
@@ -101,17 +105,21 @@ nav .profile-link a {
 
 .section-main p {
   color: white;
-  font-size: 50px;
-  font-family: fantasy;
+  font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 10px;
+  font-family: 'Roboto Mono', monospace;
 }
 
 .section-main-button {
-  font-family: fantasy;
-  font-size: 20px;
-  background-color: #47cfac;
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 700;
+  font-size: 18px;
+  background: #47cfac;
   border: 0;
-  width: 100px;
+  width: 110px;
   height: 50px;
+  cursor: pointer;
 }
 
 /* /Main */
