--- a/css/blogs.css
+++ b/css/blogs.css
@@ -12,6 +12,11 @@ nav {
   background-color: #232323;
 }
 
+.grid-container {
+  max-width: 980px;
+  margin: auto;
+}
+
 .home-body {
   font-family: 'Roboto Mono' monospace;
   display: block;
@@ -70,4 +75,37 @@ nav {
   font-size: 12px;
   font-family: 'Roboto Mono' monospace;
 }
+
+.blogs-posts-container .post-container {
+  display: inline-block;
+  padding-left: 10px;
+  max-width: 30%;
+  margin-bottom: 50px;
+}
+
+.blogs-posts-container .post-container p {
+  margin-bottom: 35px;
+}
+
+.blogs-posts-container .post-container img {
+  width: 100%;
+  height: auto;
+}
+
 /* /Blogs */
+
+/* Footer */
+
+footer {
+  width: 100%;
+  height: 80px;
+  background-color: #22272d;
+  border-top: 35px solid #47cfac;
+  text-align: center;
+}
+
+footer p {
+  color: white;
+  margin-top: 30px;
+}
+/* /Footer */
