--- a/css/blogs.css
+++ b/css/blogs.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto+Slab:400,700|Roboto:400,500,700,900&display=swap');
 
 body {
-  font-family: 'Roboto Mono' monospace;
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
   background-image: none;
@@ -109,3 +109,25 @@ footer p {
   margin-top: 30px;
 }
 /* /Footer */
+
+/* Blog */
+.blogpost-img-container {
+  padding: 0px 50px 40px;
+}
+
+.blogpost-img-container img {
+  width: 100%;
+}
+
+.blogpost-main-container {
+  padding: 0 50px 40px;
+}
+
+.blogpost-main-container h3 {
+  border-bottom: 1px solid #cdd2da;
+  padding-bottom: 20px;
+}
+
+.blogpost-main-container div h1 {
+  font-size: 35px;
+}
