--- a/css/blogs.css
+++ b/css/blogs.css
@@ -131,3 +131,70 @@ footer p {
 .blogpost-main-container div h1 {
   font-size: 35px;
 }
+
+/* Contacto */
+
+.contact-main-container {
+  display: grid;
+  grid-template-columns: 1fr 140px 2fr 140px 2fr 1fr;
+  /* Para definir areas */
+  grid-template-areas: '. img1 p1 img2 p2 .';
+  background-color: #e6e9ed;
+}
+
+.imagen-contacto-1 {
+  grid-area: img1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin: 30px 0;
+}
+
+.contact-left {
+  grid-area: p1;
+  display: inline-block;
+  margin: 30px 0;
+  padding-top: 70px;
+}
+
+.imagen-contacto-1 img {
+  width: 120px;
+  height: 120px;
+  padding-right: 20px;
+}
+
+.contact-left a {
+  font-size: 20px;
+  border-bottom: 1px solid black;
+}
+
+.contact-left p {
+  padding-right: 20px;
+}
+
+/* Parte right */
+.imagen-contacto-2 {
+  grid-area: img2;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 30px 0;
+}
+
+.contact-right {
+  grid-area: p2;
+  display: inline-block;
+  margin: 30px 0;
+  padding-top: 70px;
+}
+
+.imagen-contacto-2 img {
+  width: 120px;
+  height: 120px;
+  padding-right: 20px;
+}
+
+.contact-right a {
+  font-size: 20px;
+  border-bottom: 1px solid black;
+}
