--- a/css/blogs.css
+++ b/css/blogs.css
@@ -198,3 +198,39 @@ footer p {
   font-size: 20px;
   border-bottom: 1px solid black;
 }
+
+/* Perfil */
+.profile-main-container {
+  padding: 70px 40px;
+  background-color: #e6e9ed;
+  margin-bottom: 50px;
+}
+
+.profile-main-container img {
+  width: 150px;
+  height: 180px;
+  margin-right: 30px;
+}
+
+.profile-container {
+  display: flex;
+}
+
+.profile-main-projects {
+  padding: 0 50px 40px;
+}
+
+.profile-main-projects h3 {
+  border-bottom: 1px solid #cdd2da;
+  padding-bottom: 35px;
+  text-align: center;
+}
+
+.projects-main-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.project-container {
+  padding: 0 10px;
+}
